name:                raildriver
version:             0.1.0.0
synopsis:            a haskell interface to the raildriver.dll
description:         a haskell interface to the raildriver.dll
homepage:            https://github.com/alios/raildriver
license:             BSD3
license-file:        LICENSE
author:              Markus Barenhoff <mbarenh@alios.org>
maintainer:          Markus Barenhoff <mbarenh@alios.org>
copyright:           2016 Markus Barenhoff <mbarenh@alios.org>
category:            Game
build-type:          Simple
tested-with: 		 GHC ==7.10.2
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Win32.Raildriver
  other-modules:       Win32.Raildriver.FFI
  other-extensions:    CPP, ForeignFunctionInterface
  build-depends:       base >=4.8 && <4.9, containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-prof-options:    -auto-all -prof 
  ghc-options:         -Wall
  extra-libraries:     raildriver
  -- extra-lib-dirs:      "C:\Program Files (x86)\Steam\steamapps\common\RailWorks\plugins"